# ai-teddy-bear-

./: .env.template  .gitignore  .pre-commit-config.yaml  123.py  213.py  44.py  55.py  5568.csv  5568.md  ADVANCED_TASK_1_VAULT_IMPLEMENTATION.md  AI_GOVERNANCE_ANALYSIS.md  AI_POWERED_TESTING_ANALYSIS.md  AI_POWERED_TESTING_IMPLEMENTATION_SUMMARY.md  AI_SAFETY_IMPLEMENTATION_SUMMARY.md  ALTERNATIVE_NAMING_STRATEGY.md  ANDROID_DEPLOYMENT_GUIDE.md  API_SETUP_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_2025.md  ARCHITECTURE_RESTRUCTURE_COMPLETION_SUMMARY.md  AUDIO_MANAGER_REFACTOR_SUCCESS.md  AUDIT_TRAIL_ANALYSIS.md  BIAS_DETECTION_SYSTEM_README.md  BUSINESS_PROPOSAL.md  BUSINESS_VALUE_PROPOSAL.md  CHAOS_ENGINEERING_IMPLEMENTATION_SUMMARY.md  CHILD_REPOSITORY_REFACTOR_SUCCESS.md  CLEANUP_FINAL_REPORT.md  CLEANUP_RECOMMENDATIONS.md  CLOUD_DEPLOYMENT_GUIDE.md  CLOUD_SECURITY_AUDIT.md  COMPLETE_PROJECT_GUIDE_FOR_SALE.md  COMPLETE_PROJECT_TREE.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_AUDIT_REPORT_2025.md  COMPREHENSIVE_CLEANUP_REPORT.md  COMPREHENSIVE_PERFORMANCE_ANALYSIS_2025.md  COMPREHENSIVE_QUALITY_REPORT_2025.md  COMPREHENSIVE_SECURITY_DEPENDENCIES_2025.md  CORRECT_DDD_FIX_PLAN.md  (+276 more)
.codacy/: codacy-cli-sh-results.txt  codacy.yaml
.scannerwork/: report-task.txt
New folder/: 22.py  55.py
api/: openapi.yaml
codacy-analysis-cli-master/: 1.py  README.md  fix-codacy-issues.patch
codacy_issues/: ALL_CRITICAL_ISSUES.md
config/: .env.example  SCHEMA_MIGRATION_COMPLETE.md  config.json  config_manager.py  default_schema.json  default_schema_new.json  production_config.json  pyproject.toml  pytest.ini  safety_keywords.json  secure_config.py
config/config/: config.json
config/environments/: README.md  development.json  production_config.json
config/schemas/: __init__.py  api_keys.json  application.json  audio_processing.json  common_definitions.json  content_moderation.json  database.json  development.json  feature_flags.json  integrations.json  interaction_limits.json  llm_settings.json  logging_config.json  monitoring.json  parental_controls.json  performance_settings.json  privacy_compliance.json  schema_loader.py  security.json  server.json  streaming_settings.json  voice_settings.json
configs/: audio_config.py  config_hardware_esp32_analyzer.py  config_manager.py  configure_logging.py  emotion_config.py  emotioncalibrationconfig.py  kafka_config.py  schema_validator.py
core/: .yamllint  CLEAN_CONTAINER_EXAMPLES.md  CLEAN_SESSION_MANAGER_SUMMARY.md  CONTAINER_REFACTORING_SUMMARY.md  LICENSE  MODERN_STREAMING_SOLUTION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  __init__.py  create_audio_streamer.py  docker-compose.prod.yml  enhanced_hume_2025.py  esp32_simulator.py  main.py  requirements.txt
coverage/: lcov.info
docs/: ARCHITECTURE.md  ASYNC_PROCESSOR_GUIDE.md  AUDIO_PROCESSING_GUIDE.md  AZURE_SPEECH_SETUP.md  CQRS_BACKEND_COMPLETION_SUMMARY.md  CQRS_COMPLETION_SUMMARY.md  CQRS_GUIDE.md  CQRS_IMPLEMENTATION_GUIDE.md  DATA_CLEANUP_SERVICE_GUIDE.md  DDD_IMPLEMENTATION_COMPLETION_SUMMARY.md  DDD_INTEGRATION_SUCCESS.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT_GUIDE.md  EMOTION_DATABASE_INTEGRATION_GUIDE.md  ENHANCED_AUDIO_SYSTEM_GUIDE.md  ENHANCED_SYSTEM_GUIDE.md  ENTERPRISE_DASHBOARD_GUIDE.md  ENTERPRISE_WEBSOCKET_MESSAGING_GUIDE.md  ESP32_MP3_COMPRESSION_SETUP_GUIDE.md  EVENT_SOURCING_BACKEND_COMPLETION_SUMMARY.md  EVENT_SOURCING_COMPLETION_SUMMARY.md  EVENT_SOURCING_GUIDE.md  EVENT_SOURCING_IMPLEMENTATION_GUIDE.md  EXCEPTION_HANDLING_GUIDELINES.md  FRONTEND_DASHBOARD_IMPLEMENTATION_GUIDE.md  FRONTEND_IMPLEMENTATION_GUIDE.md  FUTURE_ENHANCEMENTS.md  HEXAGONAL_ARCHITECTURE_IMPLEMENTATION.md  HUME_AI_INTEGRATION_GUIDE.md  HUME_DATABASE_GUIDE.md  HUME_INTEGRATION_SUMMARY_2025.md  HUME_TESTING_GUIDE.md  KAFKA_BACKEND_COMPLETION_SUMMARY.md  KAFKA_EVENT_STREAMING_GUIDE.md  LAUNCH_CHECKLIST.md  MP3_COMPRESSION_IMPLEMENTATION_SUMMARY.md  MTLS_IMPLEMENTATION_GUIDE.md  MTLS_IMPLEMENTATION_SUMMARY.md  NOTIFICATION_SERVICE_GUIDE.md  PHASE1_SECURITY_FOUNDATION_REPORT.md  (+31 more)
esp32/: ESP32_AUDIO_STREAMING_GUIDE.md  INTEGRATION_GUIDE_2025.md  audio_processor.cpp  audio_processor.h  example_enhanced_usage.ino  hardware_guide.md  secure_config.h
esp32_simulators_backup/: CLEANUP_SIMULATORS.md  esp32_production_simulator.py
examples/: ai_safety_demo.py
frontend/: DEPENDENCY_OPTIMIZATION_SUMMARY.md  Dockerfile.prod  FRONTEND_REFACTORING_COMPLETE.md  dependency-analysis.json  package.json  tsconfig.json
infrastructure/: cache.py  config.py  database.py  graphql.py  graphql_server.py  grpc.py  health.py
observability/: OBSERVABILITY_REFACTORING_COMPLETE.md  alert-rules.yaml  deployment-manifests.yaml  grafana-dashboards.json  sli-slo-definitions.yaml  stack.yaml
scripts/: ANALYZE_LLM_FACTORY.bat  INSTALL_REQUIREMENTS.bat  MODERATION_IMPROVEMENTS_README.md  QUICK_START.md  README.md  README_SIMULATOR.md  RUN_ASYNC_PROCESSOR_TEST.bat  RUN_DATA_CLEANUP_TEST.bat  RUN_EMOTION_DATABASE_TEST.bat  RUN_ENHANCED_AUDIO_TEST.bat  RUN_HUME_DATABASE_TEST.bat  RUN_NOTIFICATION_TEST.bat  RUN_PRODUCTION_SYSTEM.bat  RUN_REPOSITORY_TESTS.bat  RUN_TASK7_TEST.bat  SEPARATION_GUIDE.md  START_COMPLETE_SYSTEM.bat  START_DASHBOARD_DEMO.bat  START_ENHANCED_SYSTEM.bat  START_ESP32_AUDIO_SIMULATOR.bat  START_ESP32_SIMULATOR.bat  START_FRONTEND.bat  START_STAGING_SYSTEM.bat  START_TEDDY_SIMULATOR.bat  START_TEDDY_SYSTEM.bat  TEST_AUDIO.bat  TEST_MODERATION_IMPROVEMENTS.bat  TEST_SCHEDULER.bat  TEST_SEPARATION.bat  advanced_deep_analyzer.py  advanced_directories_analyzer.py  advanced_duplicate_finder.py  analysis_summary.md  backup_database.py  chaos_experiment_runner.py  check_render_setup.py  clean_architecture_relocator.py  cleanup_ddd_duplicates.py  (+100 more)
src/: main.py  (+12 more)
(+1782 files in other folders)
